# ai-news-aggregator-self

./: main.py  pyproject.toml  render.yaml  requirements.txt
app/: main.py  runner.py
app/agent/: agent.py
app/db/: __init__.py  init_db.py  models.py  repository.py
app/models/: __init__.py  config.py  llm_response.py  news.py  youtube.py
app/scrapers/: __init__.py  anthropic_scraper.py  openai_scraper.py  youtube_scraper.py
app/services/: email_service.py
